<resources>
    <string name="app_name">North Star</string>
    <string name="enter_car_number">Например A777AA 71</string>
    <string name="save_car_number">Сохранить</string>
    <string name="hello_txt">Добро пожаловать в North Star Logistics!</string>
    <string name="enter_car_number_txt">Введите пожалуйста номер машины на которой вы сейчас работаете: </string>
    <string name="applications_now_txt">Актуальная заявка: </string>
    <string name="dot">.</string>
    <string name="goBack">Вход</string>
    <string name="routes">Маршрут</string>
    <string name="carBtnTxt">Машина</string>
    <string name="archive">Архив</string>
    <string name="mainActivity">Главная</string>
    <string name="progressBarTxt">Прогресс вашей поездки</string>
    <string name="yesAndIWantChangeStatus">Да, и хочу перейти к следущему пункту</string>
    <string name="characteristicsTextView">Характеристики: </string>
    <string name="helpMeButton">Помощь</string>
    <string name="uQuestion">Что у вас произошло?</string>
    <string name="discripProblem">Опишите свою проблему здесь</string>
    <string name="sendProblemBtnText">Отправить</string>
    <string name="enterDetails">Введите характеристики и особенности авто</string>
    <string name="clean">Очистить все</string>
    <string name="copyCoord">Копировать координаты</string>
    <string name="abotStatus">Все виды статусов: </string>
    <string name="status1">Свободна</string>
    <string name="status2">Назначена</string>
    <string name="status3">Прибыла на погрузку</string>
    <string name="status4">Погружена</string>
    <string name="status5">Транзит</string>
    <string name="status6">Прибыла на выгрузку</string>
    <string name="status7">Выгружена</string>
    <string name="status8">Завершение рейса</string>
    <string name="status9">Техническое обслуживание</string>
</resources>