<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE5FA"
    tools:context=".CarActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/upperTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/goBack"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goBackBtn"
            android:rotation="270"
            android:text="@string/goBack"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mainActivity"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goMain"
            android:rotation="270"
            android:text="@string/mainActivity"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/helpMeBtn"
            android:layout_width="95dp"
            android:layout_height="75dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-black"
            android:onClick="helpMe"
            android:rotation="270"
            android:text="@string/helpMeButton"
            android:textColor="@color/main_color"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/characteristicsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/characteristicsTextView"
        android:textColor="@color/main_color"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicsTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TextView для отображения содержимого базы данных -->
            <TextView
                android:id="@+id/dbTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="@string/dot"
                android:textColor="@color/main_color"
                android:textSize="18sp" />

            <!-- Поле ввода текста -->
            <EditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterDetails"
                android:minHeight="48dp" />

            <!-- Кнопка Сохранить -->
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="saveText"
                android:text="@string/save_car_number" />

            <!-- Кнопка Очистить базу данных -->
            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="clearDatabase"
                android:text="@string/clean" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
