<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAE5FA"
    tools:context=".ArchiveActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/car_number_text_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/goBack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goBackBtn"
            android:rotation="270"
            android:text="@string/goBack"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/routes"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goRoutes"
            android:rotation="270"
            android:text="@string/routes"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/carBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goCar"
            android:rotation="270"
            android:text="@string/carBtnTxt"
            android:textColor="@color/main_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mainActivity"
            android:layout_width="80dp"
            android:layout_height="62dp"
            android:layout_marginTop="90dp"
            android:fontFamily="sans-serif-black"
            android:minHeight="48dp"
            android:onClick="goMain"
            android:rotation="270"
            android:text="@string/mainActivity"
            android:textColor="@color/main_color"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="АРХИВ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>